--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,39 @@
+  <!-- Modal -->
+  <div class="modal fade" id="subscribe" tabindex="-1" aria-labelledby="subscribeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Subscribe to Mailing List</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+			<form target="_blank" action="https://formsubmit.co/edabad1814f51b05120c565069b35a97" method="POST">
+				<div class="input-group">
+				  <div class="form-row">
+					<div class="col">
+					  <input type="text" name="name" class="form-control" placeholder=" Full Name" required>
+					</div>
+					<div class="col">
+					  <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+					</div>
+					<div>
+						<button type="submit" class="btn btn btn-dark btn-block">Submit Form</button>
+					</div>
+				  </div>
+				</div>
+				
+				
+			  </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <footer id="footer" class="dark text-dark" style="background: url('assets/images/footer-bg.jpg') repeat; background-size: cover; background-color: #EDF7FD">
 	<div class="container">
 		<!-- Footer Widgets
@@ -11,16 +47,8 @@
 							<p class="mb-0">Join our mailing list to receive updates about our work, upcoming events, the regular HIH newsletter and other tailored information.
 
 								<div class="widget-subscribe-form-result"></div>
-								<form action="#" method="post" class="mt-3">
-									<div class="input-group mx-auto subscribe-form">
-										<input type="text" class="form-control required" placeholder="First name">
-										<input type="text" class="form-control required" placeholder="Last name">
-										<input type="email" class="form-control required email" placeholder="Email address">
-										<div class="input-group-append">
-											<button class="btn btn-primary" type="submit">Subscribe</button>
-										</div>
-									</div>
-								</form>
+								<button type="submit" class="btn btn-lg btn-primary btn-block"  data-toggle="modal" data-target="#subscribe">Subscribe</button>
+
 							</div>
 						</div>
 						<div class="col-md-8">
